# Tiny-Renderer

./: .gitignore  CMakeLists.txt  ConstructionLog.md  README.md  geometry.h  linedraw.cpp  linedraw.h  main.cpp  rendering.cpp  rendering.h  shader.h  tgaimage.cpp  tgaimage.h  tinyobjloader.cpp  tinyobjloader.h  transformation.cpp  transformation.h
